[package]
name = "tt"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "^0.11", features = ["json"] }
serde = { version = "^1.0", features = ["derive"] }
tokio = { version = "^1.36" }
chrono = { version = "^0.4", features = ["serde"] }
serde_json = { version = "^1.0" }
log = "^0.4"
